# txtclassy

./: .env  .gitignore  README.md  pyproject.toml
txtclassy/: config.py  main.py
txtclassy/controller/: classify_text.py
txtclassy/helper/: file.py
txtclassy/service/: classifier.py  training.py
txtclassy/static/personality/: train.csv
